# pypipeline

./: project.db  pyproject.toml
.confidential/: default.json
.github/workflows/: ci.yml
project/: settings.py
tests/: test_something.py
