[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Tyrone Compton <tyrone.compton@cloudreach.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
confidential = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
