[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Tyrone Compton <tyrone.compton@cloudreach.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
confidential = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
